# deribit-price-service

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 488a4d873a98_create_prices_table.py
src/api/: dependencies.py
src/api/v1/: __init__.py  prices.py
src/client/: market_data.py
src/core/: celery_app.py  config.py  constants.py
src/db/: session.py
src/db/models/: price.py
src/repositories/: price_repository.py
src/schemas/: price.py
src/services/: price_collector_service.py
src/tasks/: collect_prices.py
tests/api/: test_prices.py
tests/services/: test_price_collector_service.py
