[project]
name = "deribit-price-service"
version = "0.1.0"
description = ""
authors = [
    {name = "mirzaev.arsen",email = "arsen.00z11@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "aiohttp (>=3.13.3,<4.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.6"

[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
